# shortlink

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Makefile  README.md
apps/services/url-service/: pyproject.toml
apps/services/url-service/docker/: Dockerfile.dev
apps/services/url-service/src/: main.py
apps/services/url-service/src/api/v1/: api.py
apps/services/url-service/src/api/v1/routes/: __init__.py  urls.py
apps/services/url-service/src/core/: logging.py  settings.py
apps/services/url-service/src/core/database/: __init__.py  base_model.py  dependencies.py  manager.py
apps/services/url-service/src/features/url/: models.py
apps/services/url-service/src/middlewares/: __init__.py  metadata_middleware.py  security_middleware.py
apps/services/url-service/src/schemas/: __init__.py  common.py
infra/docker/: docker-compose.yml
infra/traefik/: traefik.yml
infra/traefik/config/: dynamic.yml
